src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginDock.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<DockPanel
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Background="yellow"
  Margin="-99,-99,99,99">

		<Button DockPanel.Dock="Bottom" />
		<Button DockPanel.Dock="Right" />
		<Button DockPanel.Dock="Left" />
		<Button DockPanel.Dock="Top" Height="100" />
		<Button Content="Button"/>

	</DockPanel>

</Grid>
